--- a/Otter/Goals/Base.lproj/Goal.storyboard
+++ b/Otter/Goals/Base.lproj/Goal.storyboard
@@ -2385,6 +2385,6 @@ lcMAAZXIAAAAAAAABAEAAAAAAAAAVgAAAAAAAAAAAAAAAAABlco
         </image>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="pSD-PU-Msr"/>
+        <segue reference="IfE-Ll-fDL"/>
     </inferredMetricsTieBreakers>
 </document>
