--- a/Otter/Base.lproj/Main.storyboard
+++ b/Otter/Base.lproj/Main.storyboard
@@ -454,6 +454,6 @@
         <image name="ripple.png" width="358" height="366"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="pzx-3H-7sa"/>
+        <segue reference="Jd9-wN-LNm"/>
     </inferredMetricsTieBreakers>
 </document>
