--- a/Otter/Goals/Base.lproj/Goal.storyboard
+++ b/Otter/Goals/Base.lproj/Goal.storyboard
@@ -404,20 +404,59 @@
             </objects>
             <point key="canvasLocation" x="-2.3999999999999999" y="178.56071964017991"/>
         </scene>
-        <!--View Controller-->
+        <!--Make New Goal Controller-->
         <scene sceneID="7Aq-wc-iOc">
             <objects>
-                <viewController id="CSY-9e-1FG" sceneMemberID="viewController">
+                <viewController id="CSY-9e-1FG" customClass="MakeNewGoalController" customModule="Otter" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="KsX-8Z-h7F">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oSN-C1-DfU">
+                                <rect key="frame" x="16" y="196" width="122" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="CSY-9e-1FG" id="vCB-a1-mt1"/>
+                                    <outlet property="delegate" destination="CSY-9e-1FG" id="nPh-60-BaV"/>
+                                </connections>
+                            </pickerView>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eI2-i8-5yL">
+                                <rect key="frame" x="137" y="196" width="119" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="CSY-9e-1FG" id="FYh-eb-f7c"/>
+                                    <outlet property="delegate" destination="CSY-9e-1FG" id="sY3-Tz-nqz"/>
+                                </connections>
+                            </pickerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Around what time?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EM1-co-wFw">
+                                <rect key="frame" x="77" y="151" width="238" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H7M-q9-Eww">
+                                <rect key="frame" x="303" y="253" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="PM"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Akd-Lz-WbF">
+                                <rect key="frame" x="303" y="291" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="AM"/>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="NW7-4K-4uh"/>
                     </view>
+                    <connections>
+                        <outlet property="hourPicker" destination="oSN-C1-DfU" id="qFV-9g-XXB"/>
+                        <outlet property="minutePicker" destination="eI2-i8-5yL" id="lOt-BP-kiM"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ztP-bk-8LJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="862" y="-492"/>
+            <point key="canvasLocation" x="861.60000000000002" y="-492.50374812593708"/>
         </scene>
         <!--Make New Goal Controller-->
         <scene sceneID="lMu-lO-Uig">
@@ -2558,6 +2597,6 @@ lcMAAZXIAAAAAAAABAEAAAAAAAAAVgAAAAAAAAAAAAAAAAABlco
         </image>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="VAq-as-70R"/>
+        <segue reference="IfE-Ll-fDL"/>
     </inferredMetricsTieBreakers>
 </document>
