--- a/Otter/Base.lproj/Main.storyboard
+++ b/Otter/Base.lproj/Main.storyboard
@@ -59,6 +59,9 @@
                                 <state key="normal" title="PROFILE">
                                     <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="LoH-0m-SD3" kind="show" id="wlQ-Sg-SH9"/>
+                                </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="otter_img.png" translatesAutoresizingMaskIntoConstraints="NO" id="7Fx-Li-uWB">
                                 <rect key="frame" x="88" y="89" width="176" height="322"/>
@@ -108,13 +111,21 @@
             </objects>
             <point key="canvasLocation" x="-282" y="645"/>
         </scene>
-        <!--GoalHomeViewController-->
+        <!--Goal-->
         <scene sceneID="dcT-lE-ZRH">
             <objects>
-                <viewControllerPlaceholder storyboardName="Goal" referencedIdentifier="GoalHomeViewController" id="GES-ED-VY3" sceneMemberID="viewController"/>
+                <viewControllerPlaceholder storyboardName="Goal" id="GES-ED-VY3" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="yiN-ZE-zvr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="245" y="645"/>
+        </scene>
+        <!--profile-->
+        <scene sceneID="63X-xl-UJM">
+            <objects>
+                <viewControllerPlaceholder storyboardName="profile" id="LoH-0m-SD3" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gLo-zf-RSu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="501" y="609"/>
         </scene>
         <!--Practices Picker View Controller-->
         <scene sceneID="uIn-9h-Pd9">
@@ -215,7 +226,7 @@
                                 <rect key="frame" x="93" y="395" width="189" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1970226467" green="0.64457446340000002" blue="0.62579810619999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Meditate">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
@@ -227,8 +238,9 @@
                                 <rect key="frame" x="93" y="444" width="189" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1970226467" green="0.64457446340000002" blue="0.62579810619999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Breathe">
-                                    <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="YWO-st-nQ7" kind="show" id="qBV-kV-ToZ"/>
@@ -238,8 +250,9 @@
                                 <rect key="frame" x="93" y="493" width="189" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.1970226467" green="0.64457446340000002" blue="0.62579810619999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Nap">
-                                    <color key="titleColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="hNF-x8-uHG" kind="show" id="y4P-wH-47c"/>
@@ -294,6 +307,9 @@
                                 <rect key="frame" x="28" y="25" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="End"/>
+                                <connections>
+                                    <segue destination="dXf-mt-KgO" kind="show" id="vJf-Lh-eZD"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k9y-GR-2Az">
                                 <rect key="frame" x="172" y="439" width="33" height="21"/>
@@ -431,7 +447,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="End"/>
                                 <connections>
-                                    <segue destination="dXf-mt-KgO" kind="show" id="pzx-3H-7sa"/>
+                                    <segue destination="dXf-mt-KgO" kind="show" id="KFz-Yb-eJs"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FP8-ZJ-WgW">
@@ -570,6 +586,9 @@
                                 <rect key="frame" x="28" y="20" width="30" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="End"/>
+                                <connections>
+                                    <segue destination="dXf-mt-KgO" kind="show" id="PRS-El-N3M"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XUg-X9-FfI">
                                 <rect key="frame" x="172" y="434" width="33" height="21"/>
